Implement Caffeine caching and update cache configuration for improved performance