@@ -11,13 +11,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Caching;
+import org.springframework.cache.Cache;
+import org.springframework.cache.CacheManager;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Service layer for Task business logic.
@@ -37,6 +38,9 @@ public class TaskService {
     @Autowired
     private UserRepository userRepository;
     
+    @Autowired
+    private CacheManager cacheManager;
+
     /**
      * Retrieves the currently authenticated user from the security context.
      *
@@ -79,13 +83,13 @@ public class TaskService {
      *
      * @return List of TaskDTOs belonging to current user
      */
-    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()", unless = "#result == null || #result.isEmpty()")
     public List<TaskDTO> getAllTasks() {
         User user = getCurrentUser();
         // Query database for user's tasks and convert to DTOs using Stream API
         return taskRepository.findByUser(user).stream()
                 .map(this::convertToDTO)  // Method reference for conversion
-                .collect(Collectors.toList());
+                .toList();
     }
     
     /**
@@ -109,10 +113,25 @@ public class TaskService {
         return convertToDTO(task);
     }
     
-    @Caching(evict = {
-            @CacheEvict(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()"),
-            @CacheEvict(value = "taskStats", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
-    })
+    private void evictUserTaskCaches() {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        Cache tasksCache = cacheManager.getCache("tasksByUser");
+        if (tasksCache != null) {
+            tasksCache.evict(username); // all tasks
+            for (Task.TaskStatus s : Task.TaskStatus.values()) {
+                tasksCache.evict(username + ":status:" + s);
+            }
+            for (Task.TaskPriority p : Task.TaskPriority.values()) {
+                tasksCache.evict(username + ":priority:" + p);
+            }
+        }
+        Cache statsCache = cacheManager.getCache("taskStats");
+        if (statsCache != null) {
+            statsCache.evict(username);
+        }
+    }
+
+    @CachePut(value = "taskById", key = "#result.id")
     public TaskDTO createTask(TaskRequest request) {
         User user = getCurrentUser();
         
@@ -124,13 +143,12 @@ public class TaskService {
         task.setUser(user);
         
         Task savedTask = taskRepository.save(task);
+        evictUserTaskCaches();
         return convertToDTO(savedTask);
     }
     
-    @Caching(evict = {
-            @CacheEvict(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()"),
-            @CacheEvict(value = "taskById", key = "#id"),
-            @CacheEvict(value = "taskStats", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    @Caching(put = {
+            @CachePut(value = "taskById", key = "#id")
     })
     public TaskDTO updateTask(Long id, TaskRequest request) {
         User user = getCurrentUser();
@@ -155,14 +173,10 @@ public class TaskService {
         task.setPriority(request.getPriority());
         
         Task updatedTask = taskRepository.save(task);
+        evictUserTaskCaches();
         return convertToDTO(updatedTask);
     }
     
-    @Caching(evict = {
-            @CacheEvict(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()"),
-            @CacheEvict(value = "taskById", key = "#id"),
-            @CacheEvict(value = "taskStats", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
-    })
     public void deleteTask(Long id) {
         User user = getCurrentUser();
         Task task = taskRepository.findById(id)
@@ -173,22 +187,23 @@ public class TaskService {
         }
         
         taskRepository.delete(task);
+        evictUserTaskCaches();
     }
     
-    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName() + ':status:' + #status")
+    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName() + ':status:' + #status", unless = "#result == null || #result.isEmpty()")
     public List<TaskDTO> getTasksByStatus(Task.TaskStatus status) {
         User user = getCurrentUser();
         return taskRepository.findByUserAndStatus(user, status).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
-    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName() + ':priority:' + #priority")
+    @Cacheable(value = "tasksByUser", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName() + ':priority:' + #priority", unless = "#result == null || #result.isEmpty()")
     public List<TaskDTO> getTasksByPriority(Task.TaskPriority priority) {
         User user = getCurrentUser();
         return taskRepository.findByUserAndPriority(user, priority).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Cacheable(value = "taskStats", key = "T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
@@ -210,7 +225,7 @@ public class TaskService {
             // Filter to only include tasks with both timestamps present
             List<Task> tasksWithTimestamps = completedTasksList.stream()
                     .filter(task -> task.getCreatedAt() != null && task.getCompletedAt() != null)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!tasksWithTimestamps.isEmpty()) {
                 // Calculate total duration in milliseconds
